Kubernetes/test-network-policy/clients.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client-allowed
  namespace: netflix-test
  labels:
    access: allowed
spec:
  containers:
    - name: client
      image: curlimages/curl:8.9.1
      command: ["sleep", "3600"]
---
apiVersion: v1
kind: Pod
metadata:
  name: client-blocked
  namespace: netflix-test
  labels:
    access: blocked
spec:
  containers:
    - name: client
      image: curlimages/curl:8.9.1
      command: ["sleep", "3600"]
