Kubernetes/test-network-policy/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: netflix
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: nginx:1.25
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: netflix
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
