Kubernetes/test-network-policy/networkpolicy-default-deny.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: netflix
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
